fixed alignments of elements..

--- a/dors/dors.css
+++ b/dors/dors.css
@@ -126,7 +126,8 @@ p {text-align:justify; font-size:15px;}
 .news_s {height:15px;}
 
 .speakers{position:relative;background-color:#f8f8f8;color:#ffffff;min-height:315px;text-align:center;}
-.img_sp {display:inline-block;margin:0 5px;width:135px;height:135px;background-color:#57b4db;color:#ffffff;}
+.img_sp {display:inline-block;margin:0px 36px 5px 0px;width:135px;height:135px;background-color:#57b4db;color:#ffffff; float:left;}
+.img_sp:last-child {margin-right:5px;}
 .img_sp:hover { color: #57b4db}
 .naz_sp {display:none;width:135px;height:135px;background-color:#57b4db;}
 .img_sp:hover .img_sp1{opacity:0.4;}
@@ -173,3 +174,16 @@ p {text-align:justify; font-size:15px;}
 .copy2 {width:30%;font-size:14px;}
 }
 .ui-front, .ui-dialog { z-index:300 !important; }
+
+.pwdb {
+    float:right;
+}
+
+.speaker_container {
+    float:left;
+    clear:both;
+    width:100%;
+}
+.fr {float:right;}
+
+.pl90 {padding-left:90px !important;}
